--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ nest-asyncio==1.5.4
 networkx==2.6.3
 nibabel==4.0.1
 nltk==3.7
-numpy==1.21.6
+numpy
 oauthlib==3.2.0
 onnx==1.12.0
 onnxruntime==1.12.0
