--- a/requirements.txt
+++ b/requirements.txt
@@ -89,7 +89,7 @@ rsa==4.9
 sacremoses==0.0.53
 scikit-image==0.19.3
 scikit-learn==0.24.2
-scipy==1.5.4
+scipy
 seaborn==0.11.2
 sentencepiece==0.1.96
 Shapely==1.8.2
