--- a/requirements.txt
+++ b/requirements.txt
@@ -57,7 +57,7 @@ onnxruntime==1.12.0
 opencv-contrib-python==4.6.0.66
 opencv-python==4.5.5.64
 packaging==21.3
-pandas==1.1.5
+pandas
 parasail==1.2.4
 parso==0.8.3
 pickleshare==0.7.5
